--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loc8r",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -10,8 +10,8 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "pug": "^2.0.0-alpha6",
     "serve-favicon": "~2.3.0"
   }
 }
