--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^4.4.17",
     "morgan": "~1.6.1",
     "pug": "^2.0.0-alpha6",
+    "request": "^2.72.0",
     "serve-favicon": "~2.3.0"
   }
 }
